jjtricks/src/test/resources/com/github/oowekyala/jjtx/cli/nodeGen/templateException/stderr.txt
JJTricks v1.0
(Run with -h parameter for a usage summary)
Running tasks [gen:common, gen:nodes, gen:javacc, gen:javacc-support]

[init]                Config chain: DummyExpr.jjtopts.yaml -> /jjtx/Root.jjtopts.yaml -> DummyExpr.jjt

[gen:nodes]
    [ERROR]    Velocity parse error
               Encountered "package"
               Was expecting one of:
                   "[" ...
                   "{" ...
                   "(" ...
                   <WHITESPACE> ...
                   <STRING_LITERAL> ...
                   "true" ...
                   "false" ...
                   <INTEGER_LITERAL> ...
                   <FLOATING_POINT_LITERAL> ...
                   <IDENTIFIER> ...
                   "{" ...
                   <WHITESPACE> ...
               in @output@/org/expr/Root.java:2:8:
                  package $package;
                          ^
               in @output@/org/expr/ExExpression.java:2:8:
                  package $package;
                          ^
               in @output@/org/expr/ExBinaryExpression.java:2:8:
                  package $package;
                          ^
               in @output@/org/expr/ExLiteral.java:2:8:
                  package $package;
                          ^
               in @output@/org/expr/ExNullLiteral.java:2:8:
                  package $package;
                          ^
               in @output@/org/expr/ExIntegerLiteral.java:2:8:
                  package $package;
                          ^
[gen:nodes]           6 classes were not generated because of an exception
[gen:javacc-support]  Generated 3 classes in @output@
[gen:javacc]          Generated JavaCC grammar @output@/org/javacc/jjtree/DummyExpr.jj

JJTricks exited with 6 errors
Rerun with --warn option for more details (e.g. stack traces)
